<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:outlineSpotShadowColor="@color/black"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/liner_2"
        android:id="@+id/imageAdib"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />

    <LinearLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAdib"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/liner_2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/txt_Bookname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/kitob_nomi"
            />

        <TextView
            android:id="@+id/txt_Adibname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/adib_ismi"
            android:layout_marginStart="8dp"
            android:textSize="15sp"

            />

     <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/category"
            android:layout_marginStart="8dp"
            android:textSize="14sp"

            />
        <TextView
            android:id="@+id/txt_janr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/janr"
            android:layout_marginStart="8dp"
            android:textSize="14sp"

            />


        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/_20_12_2021"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            tools:ignore="SmallSp" />


    </LinearLayout>

        <TextView
            android:id="@+id/txt_til"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/til"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/liner_2"
            app:layout_constraintHorizontal_bias="0.9"

            />

        <ImageView
            android:id="@+id/liked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintVertical_bias="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_unbookmark_border_24"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>