<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200"
    tools:context=".SignInFragment">


    <TextView
        android:id="@+id/txt_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ro_yxatdan_o_tish"
        android:textStyle="italic"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_assignment_ind_24"
        app:layout_constraintTop_toBottomOf="@id/txt_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_gmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        android:text="@string/gmail_orqali"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_bar"
        app:layout_constraintBottom_toTopOf="@id/txt_mobilePhone"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="15dp"
        app:layout_constraintVertical_bias="0.3"
        />

    <TextView
        android:id="@+id/txt_mobilePhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/telefon_raqami_orqali"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_gmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintLeft_toRightOf="@id/txt_gmail"
        app:layout_constraintBottom_toBottomOf="@id/txt_gmail"
        app:layout_constraintTop_toTopOf="@id/txt_gmail"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/btn_next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintLeft_toRightOf="@id/txt_mobilePhone"
        app:layout_constraintBottom_toBottomOf="@id/txt_mobilePhone"
        app:layout_constraintTop_toTopOf="@id/txt_mobilePhone"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>