<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".SozlamalarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/sozlamalar"
        android:textStyle="bold"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/setting_share"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_marginStart="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/ulashish"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/setting_info"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_info_24"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/dastur_haqida"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/setting_addBook"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="1dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/kitob_qo_shish"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>




    </androidx.cardview.widget.CardView>



</LinearLayout>